# penumbra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/calendar/: mod.rs  parser.rs  types.rs
src/cli/: commands.rs  mod.rs
src/combat/: actions.rs  ai.rs  mod.rs  system.rs
src/config/: mod.rs  settings.rs
src/email/: imap.rs  mod.rs  parser.rs  types.rs
src/entity/: enemy.rs  mod.rs  player.rs  types.rs
src/fov/: mod.rs  shadowcast.rs
src/game/: mod.rs  multiplayer.rs  progression.rs  save.rs  state.rs
src/git/: mod.rs  parser.rs  types.rs
src/item/: effects.rs  item.rs  mod.rs  types.rs
src/ui/: app.rs  colors.rs  input.rs  mod.rs  render.rs
src/ui/widgets/: mod.rs
src/weather/: mod.rs  parser.rs  types.rs
src/world/: generator.rs  mod.rs  room.rs  tile.rs  types.rs
tests/: combat_test.rs  entity_test.rs  fov_test.rs  game_state_test.rs  git_parser_test.rs  item_test.rs  save_test.rs  world_test.rs
